put json loading in its own function

--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
 	"listen": ":4000",
-	"proxy": ":4005",
+	"proxy": "jobmaster.ow:80",
 	"forwards": [
+		":4005",
 		":4050",
 		":4020",
 		":4040"
