changed Target to normal setting

--- a/config.json
+++ b/config.json
@@ -1,11 +1,10 @@
 {
-	"listen": ":4000",
+	"listen": ":8000",
 	"proxy": ":8080",
+	"timeout": 1,
 	"forwards": [
-		":4010",
-		":4020",
-		":4030",
-		":4040",
-		":4050"
+		":3020",
+		"10.0.100.234:80",
+		"google.com:80"
 	]
 }
